--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-loader-spinner": "^3.1.5",
+        "react-router-dom": "^5.1.2",
         "react-scripts": "3.4.1"
     },
     "devDependencies": {
