--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@testing-library/react": "9.5.0",
         "@testing-library/user-event": "7.2.1",
         "material-design-icons": "^3.0.1",
+        "query-string": "^6.12.1",
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-loader-spinner": "^3.1.5",
