--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
+        "lint": "eslint ./src --fix",
         "commit": "npx git-cz",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
@@ -15,26 +16,34 @@
         "@testing-library/jest-dom": "4.2.4",
         "@testing-library/react": "9.5.0",
         "@testing-library/user-event": "7.2.1",
-        "material-design-icons": "^3.0.1",
-        "query-string": "^6.12.1",
+        "material-design-icons": "3.0.1",
+        "prop-types": "^15.7.2",
+        "query-string": "6.12.1",
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-loader-spinner": "^3.1.5",
+        "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "3.4.1"
+        "react-scripts": "3.4.1",
+        "redux": "^4.0.5",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-thunk": "^2.3.0",
+        "reselect": "^4.0.0"
     },
     "devDependencies": {
+        "babel-eslint": "^10.1.0",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "commitizen": "4.0.3",
         "cz-conventional-changelog": "3.1.0",
         "eslint": "6.8.0",
         "eslint-config-airbnb": "18.1.0",
         "eslint-config-airbnb-base": "14.1.0",
         "eslint-config-prettier": "6.10.1",
+        "eslint-plugin-babel": "^5.3.0",
         "eslint-plugin-import": "2.20.2",
         "eslint-plugin-node": "11.1.0",
         "eslint-plugin-prettier": "3.1.2",
-        "gh-pages": "2.2.0",
-        "prop-types": "15.7.2"
+        "prettier": "^2.0.5"
     },
     "eslintConfig": {
         "extends": "react-app"
